# schema-definitions

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  DISCOVERY.md  GEMINI.md  README.md  pyproject.toml  value-repos.json
examples/: assertion-evidence-v1-example.json  coverage-receipt-v1-example.json  governance-atlas-receipt-v1-example.json  governance-cadence-receipt-v1-example.json  governance-snapshot-bundle-v1-example.json  governance-stage-receipt-v1-example.json  governance-testament-v1-example.json  iceberg-atlas-v1-example.json  ideal-form-register-v1-example.json  lineage-graph-v1-example.json  node-self-image-set-v1-example.json  node-self-image-v1-example.json  normalization-parity-receipt-v1-example.json  normalized-event-v1-example.json  owner-reference-v1-example.json  parameter-contract-v1-example.json  source-census-v1-example.json  source-envelope-v1-example.json
schemas/: assertion-evidence.v1.schema.json  coverage-receipt.v1.schema.json  governance-atlas-receipt.v1.schema.json  governance-cadence-receipt.v1.schema.json  governance-snapshot-bundle.v1.schema.json  governance-stage-receipt.v1.schema.json  governance-testament.v1.schema.json  iceberg-atlas.v1.schema.json  ideal-form-register.v1.schema.json  lineage-graph.v1.schema.json  node-self-image-set.v1.schema.json  node-self-image.v1.schema.json  normalization-parity-receipt.v1.schema.json  normalized-event.v1.schema.json  owner-reference.v1.schema.json  parameter-contract.v1.schema.json  source-census.v1.schema.json  source-envelope.v1.schema.json
scripts/: validate.py  validate_governance_memory.py
(+9 files in other folders)
